log
Fri Apr 18 15:52:59 -04 2025: 
 hashmap.c | 74 +++++++++++++++++++++++++++++++++++++++++++--------------------
 1 file changed, 51 insertions(+), 23 deletions(-)
 tests:  4|5
total_score: 20/70
eeef3b7
Fri Apr 18 16:13:33 -04 2025: 
 hashmap.c | 32 ++++++++++++++++++++++++++------
 1 file changed, 26 insertions(+), 6 deletions(-)
Compilation failed
In file included from test.c:4:
./hashmap.c:82:9: error: void function 'enlarge' should not return a value [-Wreturn-type]
        return EXIT_FAILURE;
        ^      ~~~~~~~~~~~~
1 error generated.
8171855
Fri Apr 18 16:13:48 -04 2025: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
6aaf441
Fri Apr 18 16:16:33 -04 2025: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
09a4dc3
Fri Apr 18 16:18:50 -04 2025: 
 hashmap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 30/70
4a56fdf
Fri Apr 18 16:19:56 -04 2025: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
0f6baca
Fri Apr 18 16:56:41 -04 2025: 
 hashmap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  6|3
total_score: 40/70
b84b99b
Fri Apr 18 16:59:43 -04 2025: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  6|3
total_score: 40/70
53832b8
Fri Apr 18 17:10:14 -04 2025: 
 hashmap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
a34a660
Fri Apr 18 17:11:33 -04 2025: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|3
total_score: 40/70
61826b0
Fri Apr 18 17:12:40 -04 2025: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
edf62b3
Fri Apr 18 17:15:55 -04 2025: 
 hashmap.c | 13 -------------
 1 file changed, 13 deletions(-)
 tests:  6|3
total_score: 40/70
14fac77
